update header and footer and menu animation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+
+                    <svg x="0" y="0" width="44px" height="44px" viewBox="0 0 44 44">
+                        <circle cx="22" cy="22" r="20"></circle>
+                    </svg>
                 </button>
                 <a class="navbar-brand" href="{{'/' | prepend : site.baseurl }}">
                     <img src="/img/logo.png" alt="logo"/> pierrebaron
