--- a/_sass/prbaron/_header.scss
+++ b/_sass/prbaron/_header.scss
@@ -1,8 +1,3 @@
 header {
-    background              : url(/img/gradient.jpg) fixed;
-    position                : relative;
-    -webkit-background-size : cover; /* pour Chrome et Safari */
-    -moz-background-size    : cover; /* pour Firefox */
-    -o-background-size      : cover; /* pour Opera */
-    background-size         : cover; /* version standardisée */
+    @include stripedBackground('/img/header.svg', #1790bb, $brand-primary)
 }
