--- a/_sass/prbaron/_tagline.scss
+++ b/_sass/prbaron/_tagline.scss
@@ -1,25 +1,38 @@
 .tagline {
-    padding-top    : $grid-gutter-width * 2;
-    padding-bottom : $grid-gutter-width * 2;
+    padding-top    : $grid-gutter-width;
+    padding-bottom : $grid-gutter-width;
+
+    @media (min-height : 700px) {
+        padding-bottom : $grid-gutter-width * 2;
+        padding-top    : $grid-gutter-width * 2;
+    }
 
     .tagline-title {
         font-family : "Mir-Medium", Kreon, sans-serif;
         font-weight : 500;
-        font-size   : 2.5em;
+        font-size   : 2em;
         text-align  : center;
         text-shadow : 0 1px 0 rgba(0, 0, 0, .3), 0 2px 0 rgba(0, 0, 0, .1);
 
+        @media (min-width : $screen-xs-min) {
+            font-size : 2.5em;
+        }
         @media (min-width : $screen-sm-min) {
-            font-size     : 3em;
-
+            font-size : 3em;
         }
     }
 
     &.tagline-primary {
-        background : transparentize($brand-primary, 0.5);
-
         .tagline-title {
             color : white;
         }
+    }
+}
+
+.homepage .tagline {
+    padding-bottom : $grid-gutter-width * 2;
+
+    @media (min-height : 700px) {
+        padding-bottom : $grid-gutter-width * 4;
     }
 }
