--- a/_sass/prbaron/_thumbnails.scss
+++ b/_sass/prbaron/_thumbnails.scss
@@ -1,10 +1,16 @@
-$img-avatar-height : 130px;
+$img-avatar-height : 100px;
 
 .img-avatar {
     left        : 50%;
     height      : $img-avatar-height;
     position    : absolute;
     margin-left : - ($img-avatar-height / 2);
-    margin-top  : - ($img-avatar-height / 3);
+    margin-top  : - ($img-avatar-height / 2);
     border      : none;
+
+    @media (min-height : 700px) {
+        height      : $img-avatar-height * 1.5;
+        margin-left : - (($img-avatar-height / 2) * 1.5);
+        margin-top  : - (($img-avatar-height / 2) * 1.5);
+    }
 }
