--- a/_sass/prbaron/_variables.scss
+++ b/_sass/prbaron/_variables.scss
@@ -350,7 +350,7 @@ $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2
 $navbar-collapse-max-height:       340px;
 
 $navbar-default-color:             #fff;
-$navbar-default-bg:                transparentize($brand-primary, 0.5);
+$navbar-default-bg:                transparent;
 $navbar-default-border:            rgba(0,0,0,.1);
 
 // Navbar links
