--- a/_sass/prbaron/_navbar.scss
+++ b/_sass/prbaron/_navbar.scss
@@ -67,6 +67,7 @@
     position           : relative;
     height             : 46px;
     width              : 46px;
+    margin-top         : 6px;
     padding            : 0;
     -webkit-transition : -webkit-transform 0.5s;
     -moz-transition    : -moz-transform 0.5s;
