--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,4 +26,10 @@
     <!-- .navbar -->
 
     {% include tagline.html %}
+
+    <svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
+         viewBox="0 0 100 100" preserveAspectRatio="none">
+        <path d="M0 0 L0 100 L50 100 0 Z"></path>
+        <path d="M100 0 L100 100 L50 100 0 Z"></path>
+    </svg>
 </header>
