--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,7 @@ menu : Blog
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-<script>
-
-</script>
-<body>
+<body class="postpage">
 
 {% include header.html %}
 
