--- a/_sass/prbaron/_prbaron.scss
+++ b/_sass/prbaron/_prbaron.scss
@@ -1,4 +1,3 @@
-
 @import "alerts";
 @import "buttons";
 @import "contact";
@@ -16,3 +15,4 @@
 @import "type";
 @import "widgets";
 @import "works";
+@import "single-post";
