--- a/_sass/prbaron/_sections.scss
+++ b/_sass/prbaron/_sections.scss
@@ -12,17 +12,40 @@
         margin-bottom : $grid-gutter-width;
         text-align    : center;
     }
+
+    & + svg {
+        display : block;
+    }
+}
+
+.section-resume {
+
+    & + svg {
+        background : $gray-lighter;
+        path {
+            fill         : $body-bg;
+            stroke       : $body-bg;
+            stroke-width : 2;
+        }
+    }
+    .resume {
+        margin-top    : $grid-gutter-width * 2;
+        margin-bottom : 0;
+
+        a:first-child {
+            margin-right : $grid-gutter-width / 2;
+        }
+    }
 }
 
 .section-skills {
     background : $gray-lighter;
-}
 
-.resume {
-    margin-top    : $grid-gutter-width * 2;
-    margin-bottom : 0;
-
-    a:first-child {
-        margin-right : $grid-gutter-width / 2;
+    & + svg {
+        path {
+            fill         : $gray-lighter;
+            stroke       : $gray-lighter;
+            stroke-width : 2;
+        }
     }
 }
