--- a/_sass/prbaron/_single-post.scss
+++ b/_sass/prbaron/_single-post.scss
@@ -8,7 +8,10 @@
             width         : 100% ! important;
         }
 
-        h1, h2, h3, h4, h5, h6, p, blockquote, ul, ol, img, .disqus, .highlighttable > tbody {
+        h1, h2, h3, h4, h5, h6,
+        p, blockquote, ul, ol,
+        .disqus, .highlighttable > tbody,
+        .alert, iframe {
             @include container-fixed();
 
             @media (min-width : $screen-sm-min) {
