uniformisation of code

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,12 @@ menu : Blog
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-<body class="postpage">
+<body>
 
 {% include header.html %}
 
 <section class="section">
-    <div class="container">
+    <div class="container container-full">
         <div class="row">
             <div class="col-sm-12">
                 <div class="post">
