--- a/_sass/prbaron/_single-post.scss
+++ b/_sass/prbaron/_single-post.scss
@@ -1,37 +1,33 @@
-.postpage {
-    .section {
-        .container {
-            margin-left   : 0;
-            margin-right  : 0;
-            padding-left  : 0;
-            padding-right : 0;
-            width         : 100% ! important;
-        }
+.container.container-full {
+    margin-left   : 0;
+    margin-right  : 0;
+    padding-left  : 0;
+    padding-right : 0;
+    width         : 100% ! important;
 
-        h1, h2, h3, h4, h5, h6,
-        p, blockquote, ul, ol,
-        .disqus, .highlighttable > tbody,
-        .alert, iframe {
-            @include container-fixed();
+    h1, h2, h3, h4, h5, h6,
+    p, blockquote, ul, ol,
+    .disqus, .highlighttable > tbody,
+    .alert, iframe {
+        @include container-fixed();
 
-            @media (min-width : $screen-sm-min) {
-                width : $container-sm;
-            }
-            @media (min-width : $screen-md-min) {
-                width : $container-md;
-            }
-            @media (min-width : $screen-lg-min) {
-                width : $container-lg;
-            }
+        @media (min-width : $screen-sm-min) {
+            width : $container-sm;
         }
+        @media (min-width : $screen-md-min) {
+            width : $container-md;
+        }
+        @media (min-width : $screen-lg-min) {
+            width : $container-lg;
+        }
+    }
 
-        ul, ol {
-            padding-left : 40px;
-        }
+    ul, ol {
+        padding-left : 40px;
+    }
 
-        .highlighttable > tbody {
-            display  : block;
-            overflow : auto;
-        }
+    .highlighttable > tbody {
+        display  : block;
+        overflow : auto;
     }
 }
