--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
 
                     <p>
                         <a href="mailto:prbaron22@gmail.com"><i class="fa fa-envelope-o"></i></a>
-                        <a href="skype:prbaron"><i class="fa fa-skype"></i></a>
+                        <a href="skype:prbaron22"><i class="fa fa-skype"></i></a>
                         <a href="https://twitter.com/prbaron"><i class="fa fa-twitter"></i></a>
                         <a href="https://github.com/prbaron"><i class="fa fa-github-alt"></i></a>
                     </p>
