--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>PB | {{ page.title }}</title>
+    <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Pierre Baron">
     <meta name="keyword" content="{{page.keywords}}">
+    <meta name="description" content="{{page.description}}">
 
     <link rel="shortcut icon" href="/img/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="/img/favicon.png">
