add meta tags for SEO

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-<body class="{{page.menu | downcase}}page">
+<body class="{{page.menu | downcase}}page" itemscope itemtype="http://schema.org/Article">
 
 {% include header.html %}
 
