add meta tags for SEO

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Pierre Baron">
     <meta name="keyword" content="{{page.keywords}}">
-    <meta name="description" content="{{page.description}}">
-
+    {% if page.description %}
+        <meta name="description" content="{{page.description}}">
+    {% endif %}
     <link rel="shortcut icon" href="/img/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="/img/favicon.png">
 
