--- a/_sass/prbaron/_prbaron.scss
+++ b/_sass/prbaron/_prbaron.scss
@@ -3,6 +3,7 @@
 @import "contact";
 @import "dropdowns";
 @import "footer";
+@import "forms";
 @import "header";
 @import "highlighter";
 @import "navbar";
