--- a/_sass/prbaron/_mixins.scss
+++ b/_sass/prbaron/_mixins.scss
@@ -79,3 +79,28 @@
     background-size   : 128px 128px, 100% 100%, auto;
     background-repeat : repeat, no-repeat, no-repeat;
 }
+
+// Button variants
+//
+// Easily pump out default styles, as well as :hover, :focus, :active,
+// and disabled options for all buttons
+
+@mixin button-variant-pbaron($background, $border) {
+    background-color : darken($background, 10%);
+    border-color     : darken($border, 12%);
+
+    &:hover,
+    &:focus,
+    &:active,
+    &.active,
+    .open > &.dropdown-toggle {
+        background-color : $background;
+        border-color     : $border;
+    }
+
+    &:active,
+    &.active,
+    .open > &.dropdown-toggle {
+        background-color : darken($background, 20%);
+        border-color     : darken($border, 24%); }
+}
