--- a/_sass/prbaron/_thumbnails.scss
+++ b/_sass/prbaron/_thumbnails.scss
@@ -1,12 +1,13 @@
-$img-avatar-height : 100px;
+$img-avatar-height : 134px;
 
 .img-avatar {
-    left        : 50%;
+    border      : none;
     height      : $img-avatar-height;
-    position    : absolute;
+    left        : 50%;
     margin-left : - ($img-avatar-height / 2);
     margin-top  : - ($img-avatar-height / 2);
-    border      : none;
+    padding     : 6px;
+    position    : absolute;
 
     @media (min-height : 700px) {
         height      : $img-avatar-height * 1.5;
