--- a/_sass/prbaron/_variables.scss
+++ b/_sass/prbaron/_variables.scss
@@ -113,9 +113,9 @@ $padding-xs-horizontal:     5px;
 $line-height-large:         1.33;
 $line-height-small:         1.5;
 
-$border-radius-base:        4px;
-$border-radius-large:       6px;
-$border-radius-small:       3px;
+$border-radius-base:        2px;
+$border-radius-large:       4px;
+$border-radius-small:       1px;
 
 //** Global color for active items (e.g., navs or dropdowns).
 $component-active-color:    #fff;
@@ -358,7 +358,7 @@ $navbar-collapse-max-height:       340px;
 
 $navbar-default-color:             #fff;
 $navbar-default-bg:                transparent;
-$navbar-default-border:            rgba(0,0,0,.1);
+$navbar-default-border:            transparent;
 
 // Navbar links
 $navbar-default-link-color:                #fff;
