--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,11 @@
     <meta name="author" content="Pierre Baron">
     <meta name="keyword" content="{{page.keywords}}">
     {% if page.description %}
-        <meta name="description" content="{{page.description}}">
+    <meta name="description" content="{{page.description}}">
     {% endif %}
     <link rel="shortcut icon" href="/img/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="/img/favicon.png">
-
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel='stylesheet' type='text/css'
+          href='http://fonts.googleapis.com/css?family=Open+Sans:300|Kreon:700|Droid+Serif:700italic|Fjalla+One'>
+    <link rel='stylesheet' type='text/css' href="/css/style.css">
 </head>
