--- a/_sass/prbaron/_single-post.scss
+++ b/_sass/prbaron/_single-post.scss
@@ -32,4 +32,11 @@
         display  : block;
         overflow : auto;
     }
+
+    h1, .h1 { font-size : floor(($font-size-base * 1.75)); }
+    h2, .h2 { font-size : floor(($font-size-base * 1.5)); }
+    h3, .h3 { font-size : floor(($font-size-base * 1.25)); }
+    h4, .h4 { font-size : $font-size-base; }
+    h5, .h5 { font-size : floor(($font-size-base * 0.75));; }
+    h6, .h6 { font-size : floor(($font-size-base * 0.5)); }
 }
