Improved font face rendering

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,5 +12,14 @@
     <link rel="apple-touch-icon-precomposed" href="/img/favicon.png">
     <link rel='stylesheet' type='text/css'
           href='http://fonts.googleapis.com/css?family=Open+Sans:300,600|Kreon:700|Droid+Serif:700italic|Fjalla+One'>
+    <style>
+        @font-face {
+            font-family : "Mir-Medium";
+            src         : url("/fonts/mir-medium/mir-medium_regular.eot");
+            src         : url("/fonts/mir-medium/mir-medium_regular.eot?#iefix") format("embedded-opentype"), url("/fonts/mir-medium/mir-medium_regular.woff") format("woff"), url("/fonts/mir-medium/mir-medium_regular.ttf") format("truetype"), url("/fonts/mir-medium/mir-medium_regular.svg#Mir-Medium") format("svg");
+            font-style  : normal;
+            font-weight : normal
+        }
+    </style>
     <link rel='stylesheet' type='text/css' href="/css/style.css">
 </head>
