--- a/_sass/prbaron/_variables.scss
+++ b/_sass/prbaron/_variables.scss
@@ -1,7 +1,7 @@
 //
 // Variables
 // --------------------------------------------------
-@include font-face("Mir-Medium", "/fonts/mir-medium/mir-medium_regular");
+//@include font-face("Mir-Medium", "/fonts/mir-medium/mir-medium_regular");
 
 $fa-font-path : "/fonts/font-awesome-4.1.0";
 
