--- a/_sass/prbaron/_tagline.scss
+++ b/_sass/prbaron/_tagline.scss
@@ -8,7 +8,7 @@
     }
 
     .tagline-title {
-        font-family : Kreon, sans-serif;
+        font-family : $font-family-sans-serif;
         font-weight : 500;
         font-size   : 2em;
         text-align  : center;
