--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
                     <h4 class="title-underline title-default">Socialisons nous</h4>
 
                     <p>
-                        <a href="mailto:prbaron22@gmail.com"><i class="fa fa-envelope-o"></i></a>
+                        <a href="mailto:pierre.r.baron22@gmail.com"><i class="fa fa-envelope-o"></i></a>
                         <a href="skype:prbaron22"><i class="fa fa-skype"></i></a>
                         <a href="https://twitter.com/prbaron"><i class="fa fa-twitter"></i></a>
                         <a href="https://github.com/prbaron"><i class="fa fa-github-alt"></i></a>
