--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="/img/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="/img/favicon.png">
     <link rel='stylesheet' type='text/css'
-          href='http://fonts.googleapis.com/css?family=Open+Sans:300,600|Kreon:700|Droid+Serif:700italic|Fjalla+One'>
+          href='http://fonts.googleapis.com/css?family=Open+Sans:300,600%7cKreon:700%7cDroid+Serif:700italic%7cFjalla+One'>
 
     <link rel='stylesheet' type='text/css' href="/css/style.css">
 </head>
