--- a/_sass/prbaron/_navbar.scss
+++ b/_sass/prbaron/_navbar.scss
@@ -7,22 +7,11 @@
     padding : 8.5px $grid-gutter-width / 2;
 
     img {
-        background     : rgba(0, 0, 0, .1);
-        border-radius  : 25em;
-        vertical-align : middle;
-        height         : 48px;
-        margin-right   : 4px;
-        @include transition(background 0.5s ease-in-out);
+        height : 48px;
     }
-    @include transition(color 0.5s ease-in-out);
 
     &:hover {
-        color : rgba(0, 0, 0, .5);
-        img {
-            background : rgba(0, 0, 0, .5);
-            @include transition(background 0.5s ease-in-out);
-        }
-        @include transition(color 0.5s ease-in-out);
+        border-bottom : none;
     }
 }
 
@@ -32,10 +21,6 @@
     li {
         text-align : center;
         flex       : 1;
-
-        @media (min-width : $grid-float-breakpoint) {
-            text-align : left;
-        }
 
         > a {
             border-bottom : 5px solid transparent;
