--- a/_sass/prbaron/_variables.scss
+++ b/_sass/prbaron/_variables.scss
@@ -26,7 +26,7 @@ $brand-warning : #f7d574;
 $brand-danger : #ed595b;
 $brand-info : #20b5cb;
 
-$footer-color : rgba(255, 255, 255, 0.6);
+$footer-color : #9aa8b0;
 
 //== Scaffolding
 //
