--- a/_sass/prbaron/_footer.scss
+++ b/_sass/prbaron/_footer.scss
@@ -49,6 +49,7 @@
         &:hover {
             color           : $link-hover-color;
             text-decoration : none;
+            border-bottom   : none;
         }
     }
 }
