--- a/_sass/prbaron/_type.scss
+++ b/_sass/prbaron/_type.scss
@@ -20,3 +20,8 @@ b, strong {
     color               : $gray-dark;
     border-bottom-color : $gray-dark;
 }
+
+a:hover, a:focus {
+    text-decoration: none;
+    border-bottom: 1px solid $link-hover-color;
+}
