added gulp to preprocess

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,5 +12,5 @@
     <link rel='stylesheet' type='text/css'
           href='http://fonts.googleapis.com/css?family=Open+Sans:300,600%7cKreon:700%7cDroid+Serif:700italic%7cFjalla+One'>
 
-    <link rel='stylesheet' type='text/css' href="/css/style.css">
+    <link rel='stylesheet' type='text/css' href="/css/style.min.css">
 </head>
