--- a/_sass/prbaron/_variables.scss
+++ b/_sass/prbaron/_variables.scss
@@ -20,7 +20,7 @@ $gray : #637680;
 $gray-light : #dde6ec;
 $gray-lighter : #f1f5f8;
 
-$brand-primary : #4fc1e9;
+$brand-primary : #009BF8;
 $brand-success : #51c693;
 $brand-warning : #f7d574;
 $brand-danger : #ed595b;
