--- a/_sass/prbaron/_header.scss
+++ b/_sass/prbaron/_header.scss
@@ -1,5 +1,5 @@
 header {
-    @include stripedBackground('/img/header.svg', #1790bb, $brand-primary);
+    @include stripedBackground('/img/header.svg', darken($brand-primary, 10%), $brand-primary);
 
     svg {
         display : block;
