--- a/_sass/prbaron/_single-post.scss
+++ b/_sass/prbaron/_single-post.scss
@@ -1,49 +1,5 @@
-.container.container-full {
-    margin-left   : 0;
-    margin-right  : 0;
-    padding-left  : 0;
-    padding-right : 0;
-    width         : 100% !important;
-    max-width     : 100%;
-
-    h1, h2, h3, h4, h5, h6,
-    p, blockquote, ul, ol,
-    .disqus, .highlight table,
-    .alert > .container,
-    iframe {
-        @include container-fixed();
-
-        @media (min-width : $screen-sm-min) {
-            width : $container-sm;
-        }
-        @media (min-width : $screen-md-min) {
-            width : $container-md;
-        }
-        @media (min-width : $screen-lg-min) {
-            width : $container-lg;
-        }
-    }
-
-    ul, ol {
-        padding-left : 40px;
-    }
-
-    .highlight table {
-        display  : block;
-        overflow : auto;
-    }
-
-    h1, .h1 { font-size : floor(($font-size-base * 1.75)); }
-    h2, .h2 { font-size : floor(($font-size-base * 1.5)); }
-    h3, .h3 { font-size : floor(($font-size-base * 1.25)); }
-    h4, .h4 { font-size : $font-size-base; }
-    h5, .h5 { font-size : floor(($font-size-base * 0.75));; }
-    h6, .h6 { font-size : floor(($font-size-base * 0.5)); }
-}
-
-
-.container.container-full .highlight table:before,
-.container.container-full .highlight table:after {
-    content: " ";
-    display: none;
+.post {
+  img {
+    border-radius: $border-radius-large;
+  }
 }
