--- a/_includes/tagline.html
+++ b/_includes/tagline.html
@@ -1,12 +1,19 @@
-<div class="tagline tagline-primary">
+<div class="header" id="header">
+  <canvas id="canvas" width="100" height="200"></canvas>
+
+  <div class="hero" id="hero">
     <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="tagline-title" itemprop="name">{{page.tagline}}</div>
-            </div>
+      <h1>{{page.tagline}}</h1>
+      <h2>I'm a software engineer</h2>
+      <div class="row">
+        <div class="col-sm-8">
+          <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers
+            une école d'ingénieur spécialisée en informatique, l'ESIR. J'ai choisi l'option domotique et services à
+            l'habitat car elle me permettrait de travailler sur divers systèmes et met en oeuvre un panel de compétences
+            plutôt large, allant de la programmation objet, l'automatisme, les réseaux ou la sécurité.
+          </p>
         </div>
-        <!-- .row -->
+      </div>
     </div>
-    <!-- .container -->
+  </div>
 </div>
-<!-- .tagline -->
