--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,35 +1,9 @@
-<header>
-    <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-
-                    <svg x="0" y="0" width="44px" height="44px" viewBox="0 0 44 44">
-                        <circle cx="22" cy="22" r="20"></circle>
-                    </svg>
-                </button>
-                <a class="navbar-brand" href="{{'/' | prepend : site.baseurl }}">
-                    <img src="/img/logo.png" alt="logo"/>
-                </a>
-            </div>
-            <div class="navbar-collapse collapse navbar-right" id="bs-example-navbar-collapse-1">
-                {% include menu.html %}
-            </div>
-            <!--/.nav-collapse -->
-        </div>
-        <!-- .container -->
-    </div>
-    <!-- .navbar -->
-
-    {% include tagline.html %}
-
-    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
-         viewBox="0 0 100 100" preserveAspectRatio="none">
-        <path d="M0 0 L0 100 L50 100"></path>
-        <path d="M100 0 L100 100 L50 100"></path>
-    </svg>
-</header>
+<nav class="navbar navbar-dark bg-primary navbar-fixed-top" id="navbar">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="/img/logo.png" alt="logo"/>
+    </a>
+    {% include menu.html %}
+    </ul>
+  </div>
+</nav>
