--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,15 @@
 
 {% include analytics.html %}
 
-<script src="/js/vendor.all.js"></script>
+<script type="text/javascript" src="/js/vendor/jquery-2.2.3.min.js"></script>
+<script type="text/javascript" src="/js/vendor/bootstrap-4.0.0-alpha.2.min.js"></script>
+<script type="text/javascript" src="/js/vendor/tweenmax-1.18.2.min.js"></script>
+<script type="text/javascript" src="/js/vendor/fastclick-1.0.6.js"></script>
 <script src="/js/app.js"></script>
+<script src="/js/canvas.js"></script>
+
+<script type="text/javascript">
+
+</script>
 </body>
 </html>
