--- a/_sass/prbaron/_navbar.scss
+++ b/_sass/prbaron/_navbar.scss
@@ -1,153 +1,17 @@
 .navbar {
-    background : none;
-    border     : none;
+  background: transparent !important;
+}
+
+.navbar-shadow {
+  background: #009bf4 !important;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .navbar-brand {
-    padding : 8.5px $grid-gutter-width / 2;
-
-    img {
-        height : 48px;
-    }
-
-    &:hover {
-        border-bottom : none;
-    }
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-.navbar-nav {
-    display : flex;
-
-    li {
-        text-align : center;
-        flex       : 1;
-
-        > a {
-            border-bottom : 5px solid transparent;
-            border-top    : none;
-            @include transition(color 0.5s ease-in-out);
-
-            &:hover {
-                @include transition(color 0.5s ease-in-out);
-            }
-
-            @media (min-width : $grid-float-breakpoint) {
-                border-top    : 5px solid transparent;
-                border-bottom : none;
-            }
-        }
-    }
-    .active > a {
-        border-bottom-color : $navbar-default-link-hover-color;
-        font-weight         : bold;
-
-        @media (min-width : $grid-float-breakpoint) {
-            border-top-color : $navbar-default-link-hover-color;
-        }
-    }
-}
-
-.navbar-toggle {
-    position           : relative;
-    height             : 46px;
-    width              : 46px;
-    margin-top         : 8px;
-    padding            : 0;
-    -webkit-transition : -webkit-transform 0.5s;
-    -moz-transition    : -moz-transform 0.5s;
-    transition         : transform 0.5s;
-    @include transform(rotate(180deg));
-
-    .icon-bar {
-        position     : absolute;
-        top          : 50%;
-        left         : 0;
-        right        : 0;
-        bottom       : 0;
-        width        : 22px;
-        margin-top   : -1px;
-        text-align   : center;
-        margin-left  : auto;
-        margin-right : auto;
-    }
-
-    // center line
-    .icon-bar:nth-child(2) {
-        -webkit-transition : background 0.5s;
-        -moz-transition    : background 0.5s;
-        transition         : background 0.5s;
-        background         : transparent;
-    }
-
-    .icon-bar:nth-child(1),
-    .icon-bar:nth-child(3) {
-        -webkit-transition : transform 0.25s;
-        -moz-transition    : transform 0.25s;
-        transition         : transform 0.25s;
-        transform-origin   : 50% 50%;
-    }
-
-    .icon-bar:nth-child(1) {
-        @include transform(translateY(0) rotate(45deg));
-    }
-
-    .icon-bar:nth-child(3) {
-        @include transform(translateY(0) rotate(-45deg));
-    }
-
-    svg {
-        fill              : transparent;
-        stroke            : $navbar-default-toggle-icon-bar-bg;
-        @include transition(stroke-dashoffset 0.5s);
-        stroke-dasharray  : 170;
-        stroke-dashoffset : 0;
-        stroke-width      : 2px;
-    }
-
-    &.collapsed {
-        @include transform(rotate(0deg));
-
-        .icon-bar:nth-child(1) {
-            @include transform(translateY(-6px) rotate(0deg));
-        }
-        .icon-bar:nth-child(2) {
-            background : $navbar-default-toggle-icon-bar-bg;
-            @include transform(translateX(0px));
-        }
-        .icon-bar:nth-child(3) {
-            @include transform(translateY(6px) rotate(0deg));
-        }
-
-        &:hover {
-            .icon-bar:nth-child(1) {
-                @include transform(translateY(-8px));
-            }
-            .icon-bar:nth-child(3) {
-                @include transform(translateY(8px));
-            }
-        }
-
-        svg {
-            stroke-dashoffset : 170;
-        }
-    }
-}
-
-.navbar-toggle .icon-bar + .icon-bar {
-    margin-top : -1px;
-}
-
-.navbar-collapse {
-    @include transition(height 0.5s ease-in-out, visibility 0.5s ease-in-out);
-    box-shadow : none;
-    overflow-y : hidden;
-
-    &.collapse {
-        display : inherit;
-        height  : 0;
-    }
-    &.in {
-        overflow-y : hidden;
-        height     : 70px; //computed value based on Google Chrome developer
-    }
+.navbar-brand img {
+  height: 38px;
 }
