--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,10 @@
 ---
 ---
 
-@import "../_sass/prbaron/mixins";
+//@import "../_sass/prbaron/mixins";
 @import "../_sass/prbaron/variables";
-@import "../_sass/bootstrap-3.3.6/bootstrap";
+@import "../_sass/bootstrap-4.0.0-alpha.2/bootstrap";
 @import "../_sass/fontello/fontello";
+@import "../_sass/animate";
 
 @import "../_sass/prbaron/prbaron";
