--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="/img/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="/img/favicon.png">
     <link rel='stylesheet' type='text/css'
-          href='http://fonts.googleapis.com/css?Kreon:700%7cDroid+Serif:700italic%7cFjalla+One'>
+          href='http://fonts.googleapis.com/css?family=Kreon:700%7cDroid+Serif:700italic%7cFjalla+One'>
 
     <link rel='stylesheet' type='text/css' href="/css/style.css">
 </head>
