--- a/_sass/prbaron/_type.scss
+++ b/_sass/prbaron/_type.scss
@@ -1,10 +1,10 @@
-body {
-    font-weight : 300;
-}
+// body {
+//     font-weight : 300;
+// }
 
-b, strong {
-	font-weight: 600;
-}
+// b, strong {
+// 	 font-weight: 600;
+// }
 
 .title-underline {
     border-bottom  : 2px solid transparent;
